# 3Kaffiliatebot-pro

./: .env  .env.example  .gitignore  .replit  README.md  add_100_products.py  add_real_working_products.py  add_remaining_products.py  add_verified_products.py  affiliate_referral_system.py  ai_trending_selector.py  amazon_bestsellers_scraper.py  amazon_image_extractor.py  amazon_scraper.py  amazon_search.py  analytics_dashboard.py  app.py  auto_product_selector.py  auto_product_updater.py  automated_posting_service.py  check_inventory.py  customer_app.py  email_blast_service.py  enhanced_image_scraper.py  facebook_poster.py  fix_all_products.py  fix_all_real_products.py  fix_credentials.py  fix_images_final.py  fix_images_now.py  fix_images_simple.py  fix_missing_images.py  fix_platform_status.py  fix_product_images.py  fix_product_images_final.py  fix_products.py  fix_real_amazon_products.py  get_more_products.py  get_real_amazon_image.py  google_image_backup.py  (+39 more)
attached_assets/: Pasted--Stored-in-directory-opt-render-cache-wheels-63-69-1e-27e9ecc1870bf9862cc2fb31933b498d6cc6a350e5-1748145998170.txt  Pasted--TemplateNotFound-jinja2-exceptions-TemplateNotFound-landing-html-Traceback-most-recent-call-last-1748154877278.txt  Pasted--workspace-git-add-templates-help-html-git-commit-m-Fix-Replace-example-Slack-token-with-safe-f-1748187354526.txt  Pasted-2025-05-27T01-45-39Z-info-Deployment-4c9990e6-b3fa-4a26-995e-fac69245cafd-2025-05-27T01-45-39Z-inf-1748310549886.txt  (+6 more)
static/: radio-player.css  radio-player.js  simple-radio.js
templates/: admin_dashboard.html  base.html  (+32 more)
(+3 files in other folders)
